--- a/Back/TVShowsAPI.Data/efpt.config.json
+++ b/Back/TVShowsAPI.Data/efpt.config.json
@@ -17,6 +17,10 @@
       {
          "Name": "[dbo].[TvShows]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Users]",
+         "ObjectType": 0
       }
    ],
    "UiHint": null,
