--- a/.gitignore
+++ b/.gitignore
@@ -412,6 +412,9 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
+/obj
+/bin
+/.vs
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
