--- a/Back/TVShowsAPI.Helper/TVShowsAPI.Helper.csproj
+++ b/Back/TVShowsAPI.Helper/TVShowsAPI.Helper.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TVShowsAPI.Data\TVShowsAPI.Data.csproj" />
-    <ProjectReference Include="..\TVShowsAPI.Helper\TVShowsAPI.Helper.csproj" />
-    <ProjectReference Include="..\TVShowsAPI.Models\TVShowsAPI.Models.csproj" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
