--- a/Back/TVShowsAPI.Data/efpt.config.json
+++ b/Back/TVShowsAPI.Data/efpt.config.json
@@ -3,7 +3,7 @@
    "ContextClassName": "TVShowDataContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
-   "IncludeConnectionString": true,
+   "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": null,
    "OutputPath": "Models",
